--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -38,12 +38,12 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} BTC serán depositados en la cuenta de tu Banda, esto no puede revertirse",
+ 	 	 	 	 	"trans": "${amount} bitcoin serán depositados en la cuenta de tu Banda, esto no puede revertirse",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
  	 	 	"deposit": {
- 	 	 	 	"trans": "Depositar BTC",
+ 	 	 	 	"trans": "Depositar Bitcoin",
  	 	 	 	"eng": "Deposit Bitcoin"
  	 	 	},
  	 	 	"editMotto": {
@@ -151,7 +151,7 @@
  	 	 	 	 	"eng": "seconds"
  	 	 	 	},
  	 	 	 	"colorBox": {
- 	 	 	 	 	"trans": "Haz click en este color",
+ 	 	 	 	 	"trans": "Presione en este color",
  	 	 	 	 	"eng": "Click on this color below"
  	 	 	 	},
  	 	 	 	"lose": {
@@ -160,7 +160,7 @@
  	 	 	 	 	 	"eng": "Decryption failed"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Haz click en la secuencia de colores correcta para desbloquear",
+ 	 	 	 	 	 	"trans": "Presione en la secuencia de colores correcta para desbloquear",
  	 	 	 	 	 	"eng": "Click on the correct color sequence to unlock"
  	 	 	 	 	},
  	 	 	 	 	"button": {
@@ -188,7 +188,7 @@
  	 	 	 	"eng": "Deposit"
  	 	 	},
  	 	 	"depositDesc": {
- 	 	 	 	"trans": "Depositar BTC en el banco",
+ 	 	 	 	"trans": "Depositar bitcoins en el banco",
  	 	 	 	"eng": "Put Bitcoins into bank"
  	 	 	},
  	 	 	"withdraw": {
@@ -196,7 +196,7 @@
  	 	 	 	"eng": "Withdraw"
  	 	 	},
  	 	 	"withdrawDesc": {
- 	 	 	 	"trans": "Retirar BTC del banco",
+ 	 	 	 	"trans": "Retirar bitcoins del banco",
  	 	 	 	"eng": "Take Bitcoins out of bank"
  	 	 	},
  	 	 	"putItemToVault": {
@@ -710,7 +710,7 @@
  	 	 	},
  	 	 	"itemUpgradeButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "potenciar",
+ 	 	 	 	 	"trans": "Mejorar",
  	 	 	 	 	"eng": "upgrade"
  	 	 	 	}
  	 	 	},
@@ -1010,7 +1010,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"nextSlotSize"
  	 	 	 	],
- 	 	 	 	"trans": "Gasta BTC para aumentar la cantidad de objetos que puedes vender en tu puesto",
+ 	 	 	 	"trans": "Gasta Bitcoins para aumentar la cantidad de objetos que puedes vender en tu puesto",
  	 	 	 	"eng": "Spend Bitcoins to increase how many items you can put in your stall at the same time"
  	 	 	},
  	 	 	"cantEnterError": {
@@ -1120,7 +1120,7 @@
  	 	 	 	},
  	 	 	 	"printingTooLow": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Mejora el rango de impresión",
+ 	 	 	 	 	 	"trans": "Mejorá el rango de impresión",
  	 	 	 	 	 	"eng": "Improve Printing Rank"
  	 	 	 	 	},
  	 	 	 	 	"description": {
@@ -1140,7 +1140,7 @@
  	 	 	 	},
  	 	 	 	"noUpgrade": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "¡Mejora tu equippamiento!",
+ 	 	 	 	 	 	"trans": "¡Mejorá tu equippamiento!",
  	 	 	 	 	 	"eng": "Upgrade your equipment!"
  	 	 	 	 	},
  	 	 	 	 	"description": {
@@ -1167,7 +1167,7 @@
  	 	 	 	 	 	"eng": "Acquire AI Cores"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Puedes obtener Núcleos de IA: \r\n        - Hurgando en varios lugares.\r\n        - Fabricándolos con Procesadores Hash y Restos Tecnológicos.\r\n        - Saqueando enemigos de todas las ubicaciones.",
+ 	 	 	 	 	 	"trans": "Puedes obtener Núcleos de IA: \r\n        - Recolectando en varios lugares.\r\n        - Fabricándolos con Procesadores Hash y Restos Tecnológicos.\r\n        - Saqueando enemigos de todas las ubicaciones.",
  	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
@@ -1211,11 +1211,11 @@
  	 	 	 	"eng": "rewards"
  	 	 	},
  	 	 	"rewardAvailable": {
- 	 	 	 	"trans": "Click para recoger recompensas",
+ 	 	 	 	"trans": "Preciona para recoger recompensas",
  	 	 	 	"eng": "Click to collect reward"
  	 	 	},
  	 	 	"viewDetails": {
- 	 	 	 	"trans": "Click para ver detalles",
+ 	 	 	 	"trans": "Presione para ver detalles",
  	 	 	 	"eng": "Click to view details"
  	 	 	}
  	 	},
@@ -1263,11 +1263,11 @@
  	 	},
  	 	"tipsBox": {
  	 	 	"title": {
- 	 	 	 	"trans": "PRO TIPS",
+ 	 	 	 	"trans": "Consejos de un Pro",
  	 	 	 	"eng": "Pro Tips"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Click para obtener más consejos",
+ 	 	 	 	"trans": "Presione para obtener más consejos",
  	 	 	 	"eng": "Click to get new tips"
  	 	 	}
  	 	},
@@ -1545,15 +1545,15 @@
  	 	 	},
  	 	 	"playerPopup": {
  	 	 	 	"viewProfile": {
- 	 	 	 	 	"trans": "Ver perfil",
+ 	 	 	 	 	"trans": "Ver Perfil",
  	 	 	 	 	"eng": "View Profile"
  	 	 	 	},
  	 	 	 	"assignRank": {
- 	 	 	 	 	"trans": "Asignar Rango",
+ 	 	 	 	 	"trans": "Asignar un Rango",
  	 	 	 	 	"eng": "Assign Rank"
  	 	 	 	},
  	 	 	 	"kickPlayer": {
- 	 	 	 	 	"trans": "Expulsar jugador",
+ 	 	 	 	 	"trans": "Expulsar al jugador",
  	 	 	 	 	"eng": "kick player"
  	 	 	 	}
  	 	 	},
@@ -1592,7 +1592,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"deleteGang": {
- 	 	 	 	"trans": "Eliminar Banda",
+ 	 	 	 	"trans": "Eliminar la Banda",
  	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
@@ -1639,7 +1639,7 @@
  	 	 	 	"trans": "Deberías comprar algún objeto curativo primero",
  	 	 	 	"eng": "Maybe buy some healing item first?",
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "Parece que no tienes ningun Pain Away contigo, cómpralas en el Mercado Trinoky en la ciudad antes de entrar en Mazmorras, ya que no regeneras HP después de cada pelea",
+ 	 	 	 	 	"trans": "Parece que no tienes ningun Analgesico contigo, cómpralos en el Mercado Trinoky en la ciudad antes de entrar en Mazmorras, ya que no regeneras HP después de cada pelea",
  	 	 	 	 	"eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon"
  	 	 	 	},
  	 	 	 	"cancel": {
@@ -1900,7 +1900,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"activate": {
- 	 	 	 	"trans": "Insertar Núcleo",
+ 	 	 	 	"trans": "Insertar un Núcleo",
  	 	 	 	"eng": "Insert Core"
  	 	 	},
  	 	 	"activateDescription": {
@@ -2062,7 +2062,7 @@
  	 	 	 	"eng": "You must be idle to do this action"
  	 	 	},
  	 	 	"noItem": {
- 	 	 	 	"trans": "Usted actual no tiene ningún artículo a la venta",
+ 	 	 	 	"trans": "Actualmente no tiene ningún artículo a la venta",
  	 	 	 	"eng": " You current don't have any item on sale"
  	 	 	}
  	 	},
@@ -2132,7 +2132,7 @@
  	 	},
  	 	"tutorialPage": {
  	 	 	"rules": {
- 	 	 	 	"trans": "reglamento",
+ 	 	 	 	"trans": "reglas",
  	 	 	 	"eng": "rules"
  	 	 	},
  	 	 	"faq": {
@@ -2152,7 +2152,7 @@
  	 	 	 	"eng": "Enemy Gangs and Equipment Marks"
  	 	 	},
  	 	 	"timeSkip": {
- 	 	 	 	"trans": "saltos",
+ 	 	 	 	"trans": "omisión de tiempo",
  	 	 	 	"eng": "time skip"
  	 	 	},
  	 	 	"calibration": {
@@ -2994,7 +2994,7 @@
  	 	 	 	"eng": "Kill enemy"
  	 	 	},
  	 	 	"getMoney": {
- 	 	 	 	"trans": "Gana BTC",
+ 	 	 	 	"trans": "Gana Bitcoin",
  	 	 	 	"eng": "Acquire Bitcoin"
  	 	 	},
  	 	 	"print": {
@@ -3688,7 +3688,7 @@
  	 	 	"eng": "upper armor"
  	 	},
  	 	"lowerArmor": {
- 	 	 	"trans": "Anrmadura Inferior",
+ 	 	 	"trans": "Armadura Inferior",
  	 	 	"eng": "lower armor"
  	 	},
  	 	"boots": {
@@ -3821,11 +3821,11 @@
  	 	},
  	 	"healing1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Dolor",
+ 	 	 	 	"trans": "Analgesico",
  	 	 	 	"eng": "Pain Away"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "¿Te duele la cabeza? ¡Usa las pastillas Pain Away™ para aliviar tu dolor!",
+ 	 	 	 	"trans": "¿Te duele la cabeza? ¡Usa las pastillas analgesicas 'Pain Away™' para aliviar tu dolor!",
  	 	 	 	"eng": "Do you have headache? Use Pain Away™ to relieve your pain!"
  	 	 	}
  	 	},
@@ -3931,11 +3931,11 @@
  	 	},
  	 	"healingArea1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Spray Pain Away",
+ 	 	 	 	"trans". "Analgésico en Spray",
  	 	 	 	"eng": "Pain Away Spray"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "¿Tus amigos y tú tienen dolor de cabeza? ¡Usa el Spray Pain Away™ para aliviar el dolor!",
+ 	 	 	 	"trans": "¿Tus amigos y tú tienen dolor de cabeza? ¡Usa el Spray analgesico 'Pain Away™' para aliviar el dolor!",
  	 	 	 	"eng": "Do you and your friends both have headaches? Use Pain Away Spray™ to relief your pain!"
  	 	 	}
  	 	},
@@ -4164,11 +4164,11 @@
  	 	},
  	 	"clanExp": {
  	 	 	"name": {
- 	 	 	 	"trans": "Intel encriptada de Banda",
+ 	 	 	 	"trans": "Pieza de memoria encriptada de la Banda",
  	 	 	 	"eng": "encrypted gang memory shard"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Disco de memoria que contiene secretos de Banda encriptados, \r\n        descifra esto en el Cuartel General de tu Banda para obtener información útil (requiere estar en una Banda)",
+ 	 	 	 	"trans": "Una pieza del disco de memoria que contiene secretos de Banda encriptados, \r\n        descifra esto en el Cuartel General de tu Banda para obtener información útil (requiere estar en una Banda)",
  	 	 	 	"eng": "A memory shard contains encrypted gang secrets, \r\n        decrypt this in your gang headquarters to gain useful intel (requires to be in a gang)"
  	 	 	}
  	 	},
@@ -4825,7 +4825,7 @@
  	 	"store": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Hey..., ven a ver mis productos."
+ 	 	 	 	 	"Oye niñito..., ven a ver mis productos."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid... Come check out my goods."
@@ -4875,7 +4875,7 @@
  	 	"storageMerchant": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Hola, soy Lee. Y recuerda, no tienes que cargar todo lo que tienes en los bolsillos."
+ 	 	 	 	 	"Hola, soy Lee. No tienes que llevar encima todo lo que te pertenece dentro de tus bolsillos, ¿Sabes?."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid, I'm Lee, You know, you don't have to carry everything you own in your pockets."
@@ -4886,7 +4886,7 @@
  	 	 	 	"eng": "Lee's Trading Post"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Negocio familiar que te permite comerciar con lo que has recolectado en tus aventuras",
+ 	 	 	 	"trans": "Negocio familiar que te permite intercambiar con lo que ellos han recolectado en sus aventuras",
  	 	 	 	"eng": "A family run trading shop that lets you trade with what they have found while scavenging"
  	 	 	},
  	 	 	"canAccessError": {
@@ -4897,7 +4897,7 @@
  	 	"blackMarket": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Hey...¿Quieres hace dinero fácil?"
+ 	 	 	 	 	"Oye niñito, ¿Te interesa ganar algo de dinero rapido?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid, wanna make some quick bucks?"
@@ -5030,7 +5030,7 @@
  	 	 	 	"eng": "Play MEGA Pachinko Game"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Konnichiwa!! ^___^\r\n        ¡Ven y juega a MEGA Pachinko! con la oportunidad de ganar GRANDES recompensas ÉPICAS\r\n        solo 5000 BTC por juego, ¡¡¡OFERTA LIMITADA!!! <3<3<3\r\n        ##Muchas gracias a Militech por patrocinar este evento##",
+ 	 	 	 	"trans": "Konnichiwa!! ^___^\r\n        ¡Ven y juega a MEGA Pachinko! Con la oportunidad de ganar GRANDES recompensas ÉPICAS\r\n        solo 5000 BTC por juego, ¡¡¡OFERTA LIMITADA!!! <3<3<3\r\n        ##Muchas gracias a Militech por patrocinar este evento##",
  	 	 	 	"eng": "Konnichiwa!! ^___^\r\n        Come play the MEGA Pachinko! With chance to win HUGE EPIC rewards\r\n        only 5000 btc per session, LIMITED TIME OFFER!!! <3<3<3\r\n        ##Special thanks for Militech for sponsoring this event##"
  	 	 	}
  	 	},
@@ -5040,7 +5040,7 @@
  	 	 	 	"eng": "Play MEGA Pachinko s plus pro max"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Konnichiwa !! UwU \r\n         ¿Te sientes rico y con suerte hoy? \r\n         ¡Juega ahora solo 1,000,000 BTC una vez (¡Oferta especial de tiempo limitado!) Con 0.1% de probabilidad de ganar un artículo épico!",
+ 	 	 	 	"trans": "Konnichiwa !! UwU \r\n         ¿Te sientes rico y con suerte hoy? \r\n         ¡Juega ahora por tan solo 1,000,000 BTC una vez (¡Oferta especial de tiempo limitado!) Con 0.1% de probabilidad de ganar un artículo épico!",
  	 	 	 	"eng": "Konnichiwa!! UwU\r\n        Are you feeling rich and lucky today?\r\n        play now only 1,000,000 btc once (limited time special offer!) with 0.1% chance to win a EPIC item! \r\n        "
  	 	 	}
  	 	},
@@ -5074,7 +5074,7 @@
  	 	 	 	"eng": "[AFK Exp Farm]\r\n        Deploys an AI to dungeon for you. This will use up an AI Core, they usually only just manage the one trip."
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Puedes usar tu Núcleo de IA para farmear enemigos automáticamente cuando estás AFK",
+ 	 	 	 	"trans": "Puedes usar tu Núcleo de IA para farmear enemigos automáticamente mientras estás AFK",
  	 	 	 	"eng": "You can use your AI Core to Auto-Farm enemies while you AFK"
  	 	 	}
  	 	},
@@ -5109,17 +5109,17 @@
  	 	 	},
  	 	 	"money": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Adquirir BTC",
+ 	 	 	 	 	"trans": "Consiga Bitcoins",
  	 	 	 	 	"eng": "Acquire Bitcoins"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Adquiere BTC de alguna manera",
+ 	 	 	 	 	"trans": "Consiga Bitcoins de cualquier manera",
  	 	 	 	 	"eng": "Acquire Bitcoins in any way"
  	 	 	 	}
  	 	 	},
  	 	 	"exp": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Obtener EXP",
+ 	 	 	 	 	"trans": "Recibir experiencia",
  	 	 	 	 	"eng": "Receive exp"
  	 	 	 	},
  	 	 	 	"description": {
@@ -5811,7 +5811,7 @@
  	 	 	 	"likerName",
  	 	 	 	"amount"
  	 	 	],
- 	 	 	"trans": "${likerName} te ha enviado ${amount} respetos por tu Salto",
+ 	 	 	"trans": "${likerName} te ha enviado ${amount} respetos por tu Omisión",
  	 	 	"eng": "${likerName} has send you ${amount} respects for your skip"
  	 	}
  	},
@@ -6185,7 +6185,7 @@
  	 	 	"eng": "Enemies and AI Core auto farm will have chance to drop Jack-o-lanterns! you can use these to craft Locked Legendary Containers!"
  	 	},
  	 	"desc3": {
- 	 	 	"trans": "¡Durante Halloween, habrá un nivel de donación de chat de ciber-bat de Time Limited estará disponible!",
+ 	 	 	"trans": "¡Durante Halloween, un nivel de donación de chat de Cyber-Murcielago estará disponible por tiempo limitado!",
  	 	 	"eng": "During Halloween, a time limited cyber-bat chat donation tier will be available!"
  	 	}
  	},
