--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -1211,7 +1211,7 @@
  	 	 	 	"eng": "rewards"
  	 	 	},
  	 	 	"rewardAvailable": {
- 	 	 	 	"trans": "Preciona para recoger recompensas",
+ 	 	 	 	"trans": "Presione para recoger recompensas",
  	 	 	 	"eng": "Click to collect reward"
  	 	 	},
  	 	 	"viewDetails": {
