--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -3931,7 +3931,7 @@
  	 	},
  	 	"healingArea1": {
  	 	 	"name": {
- 	 	 	 	"trans". "Analgésico en Spray",
+ 	 	 	 	"trans": "Analgésico en Spray",
  	 	 	 	"eng": "Pain Away Spray"
  	 	 	},
  	 	 	"description": {
