Added Calibration and Equipment pages to UK

--- a/contribution/lang/uk.json
+++ b/contribution/lang/uk.json
@@ -3779,7 +3779,7 @@
  	 	},
  	 	"secondary": {
  	 	 	"name": {
- 	 	 	 	"trans": "Спец зброя",
+ 	 	 	 	"trans": "Спец. зброя",
  	 	 	 	"eng": "Special Weapon"
  	 	 	}
  	 	},
@@ -4248,7 +4248,7 @@
  	 	},
  	 	"upgradeNoBreak": {
  	 	 	"name": {
- 	 	 	 	"trans": "Наноботи Безпеки Калібрування",
+ 	 	 	 	"trans": "Наноботи Безпечного Калібрування",
  	 	 	 	"eng": "Calibration Safety Nano Bots"
  	 	 	},
  	 	 	"description": {
