--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -38,7 +38,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} bitcoin, çetenizin hesabına yatırılacak, bu aksiyon geri alınamaz",
+ 	 	 	 	 	"trans": "${amount} bitcoin çetenizin hesabına yatırılacak, bu işlem geri alınamaz",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
@@ -128,16 +128,16 @@
  	 	 	"colors": {
  	 	 	 	"win": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Şifre çözme başarılı",
+ 	 	 	 	 	 	"trans": "Şifre kırma başarılı",
  	 	 	 	 	 	"eng": "Decryption successful"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "işleme",
+ 	 	 	 	 	 	"trans": "işleniyor",
  	 	 	 	 	 	"eng": "processing"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Renkli tuş takımı ile kilitli bir yağma kutusu buldunuz, doğru renk dizisi ile kilidini açabilmelisiniz.",
+ 	 	 	 	 	"trans": "Renkli tuş kilitli bir ganimet kasası buldun, doğru renk dizisi ile kilidini açabilirsin.",
  	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
  	 	 	 	},
  	 	 	 	"progress": {
@@ -151,16 +151,16 @@
  	 	 	 	 	"eng": "seconds"
  	 	 	 	},
  	 	 	 	"colorBox": {
- 	 	 	 	 	"trans": "Aşağıdaki bu renge tıklayın",
+ 	 	 	 	 	"trans": "Aşağıdan bu rengi seç",
  	 	 	 	 	"eng": "Click on this color below"
  	 	 	 	},
  	 	 	 	"lose": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Şifre çözme başarısız oldu",
+ 	 	 	 	 	 	"trans": "Şifre kırma başarısız",
  	 	 	 	 	 	"eng": "Decryption failed"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Kilidi açmak için doğru renk dizisine tıklayın",
+ 	 	 	 	 	 	"trans": "Kilidi açmak için doğru renk dizisini seçin",
  	 	 	 	 	 	"eng": "Click on the correct color sequence to unlock"
  	 	 	 	 	},
  	 	 	 	 	"button": {
@@ -188,7 +188,7 @@
  	 	 	 	"eng": "Deposit"
  	 	 	},
  	 	 	"depositDesc": {
- 	 	 	 	"trans": "Bitcoin'leri bankaya koy",
+ 	 	 	 	"trans": "Bitcoin'leri bankaya yatır",
  	 	 	 	"eng": "Put Bitcoins into bank"
  	 	 	},
  	 	 	"withdraw": {
@@ -196,7 +196,7 @@
  	 	 	 	"eng": "Withdraw"
  	 	 	},
  	 	 	"withdrawDesc": {
- 	 	 	 	"trans": "Bitcoin'leri bankadan çıkar",
+ 	 	 	 	"trans": "Bitcoin'leri bankadan çek",
  	 	 	 	"eng": "Take Bitcoins out of bank"
  	 	 	},
  	 	 	"putItemToVault": {
@@ -212,7 +212,7 @@
  	 	 	 	"eng": "Withdraw Item"
  	 	 	},
  	 	 	"takeItemFromVaultDesc": {
- 	 	 	 	"trans": "Eşyaları kasadan çıkar",
+ 	 	 	 	"trans": "Eşyaları kasadan al",
  	 	 	 	"eng": "Take items out from your vault"
  	 	 	},
  	 	 	"upgradeSlot": {
@@ -231,15 +231,15 @@
  	 	 	},
  	 	 	"modal": {
  	 	 	 	"selectDepositItem": {
- 	 	 	 	 	"trans": "Kasaya kaç tane koymak istersiniz?",
+ 	 	 	 	 	"trans": "Kasaya kaç adet koymak istersiniz?",
  	 	 	 	 	"eng": "How many would you like to put in the vault?"
  	 	 	 	},
  	 	 	 	"selectWithdrawItem": {
- 	 	 	 	 	"trans": "Kasadan kaç tane çıkarmak istersiniz?",
+ 	 	 	 	 	"trans": "Kasadan kaç adet almak istersiniz?",
  	 	 	 	 	"eng": "How many would you like to withdraw from the bank?"
  	 	 	 	},
  	 	 	 	"selectDeposit": {
- 	 	 	 	 	"trans": "Ne kadar para yatırmak istersiniz?",
+ 	 	 	 	 	"trans": "Ne kadar yatırmak istersiniz?",
  	 	 	 	 	"eng": "How much would you like to deposit?"
  	 	 	 	},
  	 	 	 	"selectWithdraw": {
@@ -268,7 +268,7 @@
  	 	 	 	},
  	 	 	 	"tertiary": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "yıkıcı.",
+ 	 	 	 	 	 	"trans": "Yokedici.",
  	 	 	 	 	 	"eng": "Destruct."
  	 	 	 	 	}
  	 	 	 	}
@@ -276,11 +276,11 @@
  	 	},
  	 	"generalCaptcha": {
  	 	 	"story": {
- 	 	 	 	"trans": "Eski bir kilitli kasa buldunuz, üzerinde bazı yazılar olan bir post-it var gibi görünüyor.",
+ 	 	 	 	"trans": "Eski bir kilitli kasa buldunuz, üzerinde bazı yazılar olan bir yapışkan kağıt var gibi görünüyor.",
  	 	 	 	"eng": "You found an old locked safe box, there seems like a post-it with some text written on it."
  	 	 	},
  	 	 	"title": {
- 	 	 	 	"trans": "Kilidini açmak için gereken PIN kodu",
+ 	 	 	 	"trans": "Kilidi açmak için PIN code gereklidir",
  	 	 	 	"eng": "Pin code required to unlock"
  	 	 	},
  	 	 	"inputLabel": {
@@ -294,7 +294,7 @@
  	 	},
  	 	"chat": {
  	 	 	"reconnecting": {
- 	 	 	 	"trans": "Bağlantı yeniden kuruluyor",
+ 	 	 	 	"trans": "Yeniden bağlantı kuruluyor",
  	 	 	 	"eng": "Reestablishing connection"
  	 	 	},
  	 	 	"notAtBottom": {
@@ -309,19 +309,19 @@
  	 	 	 	"eng": "Replying to ${playerName}"
  	 	 	},
  	 	 	"linksNotAllowed": {
- 	 	 	 	"trans": "Linklere izin verilmez",
+ 	 	 	 	"trans": "Link göndermek yasaktır",
  	 	 	 	"eng": "Links are not allowed"
  	 	 	},
  	 	 	"spamBlock": {
- 	 	 	 	"trans": "Lütfen anlamsız mesajlar göndermeyin, spam yapanlar susturulur.",
+ 	 	 	 	"trans": "Lütfen anlamsız mesajlar göndermeyin, spamlar susturulacaktır.",
  	 	 	 	"eng": "Please do not send meaningless message, spams will be muted."
  	 	 	},
  	 	 	"repeatBlock": {
- 	 	 	 	"trans": "Lütfen aynı mesajı tekrar tekrar göndermeyin, spam yapanlar susturulur.",
+ 	 	 	 	"trans": "Lütfen aynı mesajı tekrar tekrar göndermeyin, spamlar susturulacaktır.",
  	 	 	 	"eng": "Please do not send the same message repeatedly, spams will be muted."
  	 	 	},
  	 	 	"shortChatBlock": {
- 	 	 	 	"trans": "Lütfen kısa mesajlar göndermeyin, bunun yerine daha uzun cümleler deneyin.",
+ 	 	 	 	"trans": "Lütfen kısa mesajlar göndermeyin, daha uzun cümleler yazmayı deneyin.",
  	 	 	 	"eng": "Please do not send short messages, try a longer sentence instead."
  	 	 	},
  	 	 	"underlevelChatBlock": {
@@ -372,18 +372,18 @@
  	 	"clanPage": {
  	 	 	"createClan": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Sen herhangi bir çetenin üyesi değilsin",
+ 	 	 	 	 	"trans": "herhangi bir çetenin üyesi değilsin",
  	 	 	 	 	"eng": "You are not a member of any gang"
  	 	 	 	},
  	 	 	 	"subtitle": {
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Bir çeteye ait olduğunuzda çete sohbeti etkinleştirilecektir. \\ Njoin, küresel sohbette arkadaşlar edinerek veya kendi çetenizi yaratarak ve arkadaşlarınızı davet ederek bir çete!",
+ 	 	 	 	 	"trans": "Bir çeteye katıldığınızda çete sohbeti etkinleştirilecektir. \\nküresel sohbette arkadaş edinerek bir çeteye katılabilir veya kendiniz bir çete oluşturup arkadaşlarınızı davet edebilirsiniz",
  	 	 	 	 	"eng": "gang chat will be enabled when you belong to a gang.\\njoin a gang by making friends in global chat or create your own gang and invite your friends!"
  	 	 	 	},
  	 	 	 	"createButton": {
- 	 	 	 	 	"trans": "Çete yaratmak",
+ 	 	 	 	 	"trans": "Çete kur",
  	 	 	 	 	"eng": "Create gang"
  	 	 	 	},
  	 	 	 	"createButtonDescription": {
@@ -391,14 +391,14 @@
  	 	 	 	 	 	"cost",
  	 	 	 	 	 	"currency"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${cost} ${currency} için bir çete oluşturun",
+ 	 	 	 	 	"trans": "Çete oluşturma maliyeti ${cost} ${currency}",
  	 	 	 	 	"eng": "Create a gang for ${cost} ${currency}"
  	 	 	 	}
  	 	 	}
  	 	},
  	 	"deathScreen": {
  	 	 	"topTitleLeft": {
- 	 	 	 	"trans": "ölümcül yaralanma",
+ 	 	 	 	"trans": "ölümcül yara",
  	 	 	 	"eng": "fatal injury"
  	 	 	},
  	 	 	"topTitleRight": {
@@ -414,7 +414,7 @@
  	 	 	 	"eng": "Critical Error: Neural Link Disconnected"
  	 	 	},
  	 	 	"progressBarTitle": {
- 	 	 	 	"trans": "Bağlantı yeniden kuruluyor",
+ 	 	 	 	"trans": "Yeniden bağlantı kuruluyor",
  	 	 	 	"eng": "Re-establishing connection"
  	 	 	}
  	 	},
@@ -427,16 +427,16 @@
  	 	"equipment": {
  	 	 	"lowPrintLevelTip": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Düşük Baskılama Rütbesi",
+ 	 	 	 	 	"trans": "Düşük Üretim Aşaması",
  	 	 	 	 	"eng": "Low Printing Rank"
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "Daha yüksek bir baskılama rütbesine sahip olarak daha güçlü silahlar basmak için baskılama rütbenizi arttırın",
+ 	 	 	 	"trans": "Üretim Aşamanızı arttırarak daha güçlü silahlar üretmek için daha fazla zula üretin",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
- 	 	 	 	"trans": "Ya da otomatik olarak yazdırarak ve önbelleklerinizi siyah pazarda satarak",
+ 	 	 	 	"trans": "Veya auto üretim yapın ve zulalarınızı Kara Korsada satın",
  	 	 	 	"eng": "Or by auto print and selling your caches in the Black Market"
  	 	 	},
  	 	 	"quickSlots": {
@@ -451,13 +451,13 @@
  	 	"quickSlot": {
  	 	 	"unbindModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Hızlı Yuvayı kaldır?",
+ 	 	 	 	 	"trans": "Hızlı Yuvadan kaldır?",
  	 	 	 	 	"eng": "Unbind quick slot?"
  	 	 	 	}
  	 	 	},
  	 	 	"bindModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Hızlı yuvaların birine atamak için kullanılabilir bir öğe seçin",
+ 	 	 	 	 	"trans": "Hızlı yuvaların birine atamak için kullanılabilir bir eşya seçin",
  	 	 	 	 	"eng": "Select a usable item to bind to a quick slot"
  	 	 	 	}
  	 	 	}
@@ -488,7 +488,7 @@
  	 	 	 	"eng": "Leaderboard"
  	 	 	},
  	 	 	"tutorial": {
- 	 	 	 	"trans": "Öğretici",
+ 	 	 	 	"trans": "Rehber",
  	 	 	 	"eng": "Tutorial"
  	 	 	},
  	 	 	"settings": {
@@ -503,11 +503,11 @@
  	 	 	 	 	 	"timeSkipMinutes",
  	 	 	 	 	 	"timeSkipCost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${timeSkipMinutes} Dakikalık Küresel Atlama, Maliyeti ${timeSkipCost} Birim",
+ 	 	 	 	 	"trans": "${timeSkipMinutes} Dakikalık Küresel Hızlandırma, Maliyeti ${timeSkipCost} Birim",
  	 	 	 	 	"eng": "Global Skip (${timeSkipMinutes} Min, Cost ${timeSkipCost} Units)"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Küresel atlama, AFK bekleme süresini atlamanızı ve işinizi anında bitirmenizi sağlar.\n     Bu etki, AFK görevi yapmakta olan tüm oyunculara uygulanacaktır",
+ 	 	 	 	 	"trans": "Küresel Hızlandırma, AFK bekleme süresini geçmenizi ve anında bitirmenizi sağlar.\r\n     Bu etki, AFK görevinde  olan tüm oyunculara uygulanacaktır",
  	 	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all player performing AFK task"
  	 	 	 	}
  	 	 	},
@@ -516,7 +516,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"itemSkipMinutes"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Atlama gerçekleştir (${itemSkipMinutes} Dakika)",
+ 	 	 	 	 	"trans": "Hızlandırma gerçekleştir (${itemSkipMinutes} Dakika)",
  	 	 	 	 	"eng": "Free time skip (${itemSkipMinutes} Min)"
  	 	 	 	},
  	 	 	 	"description": {
@@ -524,23 +524,23 @@
  	 	 	 	 	 	"timeSkipItemName",
  	 	 	 	 	 	"itemSkipMinutes"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${itemSkipMinutes} dakikalık bir atlama için bir ${timeSkipItemName} kullanın",
+ 	 	 	 	 	"trans": "${itemSkipMinutes} dakikalık bir atlama için bir adet ${timeSkipItemName} kullanın",
  	 	 	 	 	"eng": "Use one of your ${timeSkipItemName} to skip ${itemSkipMinutes} minutes"
  	 	 	 	}
  	 	 	},
  	 	 	"confirmModal": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Kullanımı onaylayın?",
+ 	 	 	 	 	"trans": "Kullanımı onayla?",
  	 	 	 	 	"eng": "Confirm use skip?"
  	 	 	 	},
  	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "Küresel atlama, AFK görevi gerçekleştiren tüm oyuncular için bekleme süresini atlayacaktır",
+ 	 	 	 	 	"trans": "Küresel hızlandırma, AFK görevinde olan tüm oyuncular için bekleme süresini geçecektir",
  	 	 	 	 	"eng": "Global Skip will skip the waiting time for all players performing AFK task"
  	 	 	 	}
  	 	 	},
  	 	 	"inProgressBox": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Küresel Atlama Sürüyor",
+ 	 	 	 	 	"trans": "Küresel Hızlandırma Sürüyor",
  	 	 	 	 	"eng": "Global Skip in progress"
  	 	 	 	},
  	 	 	 	"subtitle": {
@@ -552,7 +552,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Küresel atlama, AFK bekleme süresini atlamanızı ve işinizi anında bitirmenizi sağlar.\n     Bu etki, AFK görevi gerçekleştiren tüm oyunculara uygulanacaktır",
+ 	 	 	 	"trans": "Küresel Hızlandırma, AFK bekleme süresini geçmenizi ve anında bitirmenizi sağlar.\r\n     Bu etki, AFK görevinde  olan tüm oyunculara uygulanacaktır",
  	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all players performing an AFK task"
  	 	 	}
  	 	},
@@ -573,7 +573,7 @@
  	 	 	},
  	 	 	"autoScrap": {
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "Otomatik parçala",
+ 	 	 	 	 	"trans": "Otomatik parçalama",
  	 	 	 	 	"eng": "Auto Scrap"
  	 	 	 	}
  	 	 	},
@@ -601,27 +601,27 @@
  	 	 	 	 	"eng": "Create Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Bu eşya için henüz toplulukça oluşturulmuş bir Lore yok, ilk yaratan siz olun.",
+ 	 	 	 	 	"trans": "Bu eşyanın henüz toplulukça yazılmış bir hikayesi yok, yazan ilk kişi siz olun.",
  	 	 	 	 	"eng": "There is no community lore for this item yet, be the first to create one for it."
  	 	 	 	}
  	 	 	},
  	 	 	"openButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Topluluk Lore'u",
+ 	 	 	 	 	"trans": "Topluluk Ansiklopedisi",
  	 	 	 	 	"eng": "Community Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Bu ürün için Topluluk Lore'unu açın",
+ 	 	 	 	 	"trans": "Bu ürün için Topluluk Ansiklopedisi'ni açın",
  	 	 	 	 	"eng": "Open the community lore for this item"
  	 	 	 	}
  	 	 	},
  	 	 	"editButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Bu Lore'u düzenle",
+ 	 	 	 	 	"trans": "Bu girdiyi düzenle",
  	 	 	 	 	"eng": "edit this lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Bu topluluk Lore'unu düzenle",
+ 	 	 	 	 	"trans": "Bu topluluk girdisini düzenle",
  	 	 	 	 	"eng": "Edit this community lore"
  	 	 	 	}
  	 	 	}
@@ -633,7 +633,7 @@
  	 	 	 	 	"eng": "Malfunctioned"
  	 	 	 	},
  	 	 	 	"instruction": {
- 	 	 	 	 	"trans": "Bu eşya kırıldı, onarım için silah tamircisine götür",
+ 	 	 	 	 	"trans": "Bu eşya kırık, onarım için silah tamircisine götür",
  	 	 	 	 	"eng": "This item is broken, bring it to Weapon Smith for repair"
  	 	 	 	}
  	 	 	},
@@ -645,7 +645,7 @@
  	 	 	 	]
  	 	 	},
  	 	 	"areaEffect": {
- 	 	 	 	"trans": "[AOE] Etki alanı, bu etki savaşta sizinle birlikte müttefiklerize de uygulayacaktır.",
+ 	 	 	 	"trans": "[AOE] Alan Etkisi, bu etki savaşta sizinle birlikte müttefiklerize uygulanacaktır.",
  	 	 	 	"eng": "[AOE] Area of Effect, the effect of this item will apply allies in combat with you."
  	 	 	},
  	 	 	"equip": {
@@ -653,7 +653,7 @@
  	 	 	 	"eng": "Equip"
  	 	 	},
  	 	 	"cantEquip": {
- 	 	 	 	"trans": "Bu ürün için seviyen çok düşük",
+ 	 	 	 	"trans": "Bu Eşya için seviyen yetersiz",
  	 	 	 	"eng": "Your level is too low for this item"
  	 	 	},
  	 	 	"unequip": {
@@ -680,16 +680,16 @@
  	 	 	 	"vars": [
  	 	 	 	 	"currentAction"
  	 	 	 	],
- 	 	 	 	"trans": "${currentAction} iken ekipman yazdıramazsınız",
+ 	 	 	 	"trans": "${currentAction} iken ekipman üretemezsin",
  	 	 	 	"eng": "You can't print equipment while ${currentAction}"
  	 	 	},
  	 	 	"printCache": {
- 	 	 	 	"trans": "Baskı Önbelleği",
+ 	 	 	 	"trans": "Zula Üretimi",
  	 	 	 	"eng": "Print Cache"
  	 	 	},
  	 	 	"printCacheDescription": {
- 	 	 	 	"trans": "Bu önbelleği yapabileceğiniz bir silah veya ekipman öğesine dönüştürün.",
- 	 	 	 	"eng": "Turn this cache into a weapon or equipment item that you can uae."
+ 	 	 	 	"trans": "Bu zulayı kullanabileceğiniz bir silaya veya kıyafete dönüştür.",
+ 	 	 	 	"eng": "Turn this cache into a weapon or equipment item that you can use."
  	 	 	},
  	 	 	"openContainer": {
  	 	 	 	"trans": "Konteynerin kilidini aç",
@@ -699,7 +699,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"currentAction"
  	 	 	 	],
- 	 	 	 	"trans": "${currentAction} iken kapların kilidini açarsınız",
+ 	 	 	 	"trans": "${currentAction} iken konteynerlerin kilidini açarsınız",
  	 	 	 	"eng": "You unlock containers while ${currentAction}"
  	 	 	}
  	 	},
@@ -716,7 +716,7 @@
  	 	 	},
  	 	 	"factoryReset": {
  	 	 	 	"confirmation": {
- 	 	 	 	 	"trans": "Bunu yapmak eşyanızdaki tüm kalibrasyonları sıfırlar, ayrıca onu tekrar takas edilebilir yapar. \n       Devam etmek istediğinize emin misiniz?",
+ 	 	 	 	 	"trans": "Bunu yapmak eşyanızdaki tüm kalibrasyonları sıfırlar, ayrıca onu tekrar takas edilebilir yapar.\r\n       Devam etmek istediğinize emin misiniz?",
  	 	 	 	 	"eng": "Doing this will reset all calibration on your item. It will also make it tradable again. \r\n      Are you sure you want to proceed?"
  	 	 	 	},
  	 	 	 	"trans": "Fabrika Ayarına Sıfırlama",
@@ -724,7 +724,7 @@
  	 	 	},
  	 	 	"noItem": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Artık bu öğeye sahip değilsin",
+ 	 	 	 	 	"trans": "Artık bu eşyaya sahip değilsin",
  	 	 	 	 	"eng": "You no longer have this item"
  	 	 	 	},
  	 	 	 	"description": {
@@ -739,7 +739,7 @@
  	 	 	 	"eng": "Secret Keys"
  	 	 	},
  	 	 	"noKeysTitle": {
- 	 	 	 	"trans": "Gizli anahtarınız yok",
+ 	 	 	 	"trans": "Hiç Gizli anahtarınız yok",
  	 	 	 	"eng": "You don't have any secret keys"
  	 	 	},
  	 	 	"noKeysSubtitle": {
@@ -755,20 +755,20 @@
  	 	},
  	 	"notificationCenter": {
  	 	 	"deleteTip": {
- 	 	 	 	"trans": "Silmek için uzun basın",
+ 	 	 	 	"trans": "Silmek için basılı tutun",
  	 	 	 	"eng": "Long press to delete"
  	 	 	}
  	 	},
  	 	"map": {
  	 	 	"interactable": {
- 	 	 	 	"trans": "Etkileşimli",
+ 	 	 	 	"trans": "Etkileşime açık",
  	 	 	 	"eng": "Interactable"
  	 	 	},
  	 	 	"hiddenNpcTip": {
  	 	 	 	"vars": [
  	 	 	 	 	"hiddenCount"
  	 	 	 	],
- 	 	 	 	"trans": "${hiddenCount} daha etkileşimli öğenin kilidi bu konumda açılabilir, kilidini açmak için seviye atlayın.",
+ 	 	 	 	"trans": "${hiddenCount} daha etkileşime açık öğelerin kilidi bu konumda açılabilir, kilitlerini açmak için seviye atlayın.",
  	 	 	 	"eng": "${hiddenCount} more interactables can be unlocked at this location, level up to unlock them."
  	 	 	},
  	 	 	"travel": {
@@ -778,14 +778,14 @@
  	 	},
  	 	"npc": {
  	 	 	"notUnlocked": {
- 	 	 	 	"trans": "Bu henüz açılmamış, karakterinizin seviyesini artırmayı deneyin",
+ 	 	 	 	"trans": "Henüz kilidı açılmadı, karakterinizin seviyesini artırmayı deneyin",
  	 	 	 	"eng": "This is not unlocked yet, try leveling up your character"
  	 	 	},
  	 	 	"repairItems": {
  	 	 	 	"vars": [
  	 	 	 	 	"repairFee"
  	 	 	 	],
- 	 	 	 	"trans": "Tüm ürünlerinizi (${repairFee} Bitcoin) karşılığı onarın",
+ 	 	 	 	"trans": "Tüm eşyalarınızı (${repairFee} Bitcoin) karşılığında onarın",
  	 	 	 	"eng": " Repair all items for (${repairFee} Bitcoin)"
  	 	 	},
  	 	 	"unlockContainerButton": {
@@ -800,11 +800,11 @@
  	 	 	 	 	 	"vars": [
  	 	 	 	 	 	 	"level"
  	 	 	 	 	 	],
- 	 	 	 	 	 	"trans": "Baskı seviyesi ${level} ekipmanları",
+ 	 	 	 	 	 	"trans": "Üretim seviyesi ${level} ekipmanlar",
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Ekipman baskı, baskı sıralamasına dayanır, daha fazla ürün yazdırarak baskı sıralamanızı kaldırın",
+ 	 	 	 	 	 	"trans": "Ekipman üretimi Üretim seviyenize bağlıdır, Üretim seviyenizi eşya üreterek arttırabilirsiniz",
  	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
  	 	 	 	 	}
  	 	 	 	}
